--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
     padding: 0;
     font-family: sans-serif;
 }
+
+.module-item {
+    cursor: pointer;
+}
+
+.module-item:hover,
+.module-item--selected{
+    background: #e2e2e2;
+}
